# g-synth-app

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SETUP_MULTIUSER.md  app.py  check_deps.py  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py  settings.json
.devcontainer/: devcontainer.json
.devcontainer/reflex-poc/: devcontainer.json
.streamlit/: config.toml
assets/: styles.css
gsynth_core/: __init__.py  constants.py
gsynth_core/alignment/: __init__.py  msa.py  pairwise.py
gsynth_core/annotation/: __init__.py  features.py
gsynth_core/cloning/: __init__.py  gibson.py  golden_gate.py  restriction_cloning.py
gsynth_ui/: __init__.py  app.py  state.py  theme.py
modules/: account.py  alignment_tools.py  codon_optimization.py  crispr_designer.py  docking_module.py  extended_synthesis.py  functional_prediction.py  help_guide.py  home.py  hybridization.py  ligase_calculator.py  ligation_check.py  my_projects.py  plasmid_visualizer.py  primer_generator.py  reverse_complement.py  settings.py  ssd.py  translation.py
pages/: 1_🔬_Sequence_Analysis.py  2_⚙_Codon_Optimization.py  3_✂_Restriction.py  4_✨_CRISPR.py  5_🧪_Primers.py  6_🧬_Cloning.py  7_📏_Alignment.py  8_🏷_Annotation.py
reflex_poc/: .gitignore  README.md  rxconfig.py
tests/: conftest.py  test_alignment.py  test_annotation.py  test_cloning.py  test_codon.py  test_crispr.py  test_io.py  test_primers.py  test_restriction.py  test_sequence.py  test_thermo.py
utils/: alignment_utils.py  auth.py  bio_utils.py  database.py  pdb_utils.py
(+44 files in other folders)
